--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vanilla JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack server",
+    "build": "webpack --mode=development"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,19 @@
   "homepage": "https://github.com/park-moen/Moen-mart#readme",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "resolutions": {
+    "glob-parent": "5.1.2"
   }
 }
