--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Vanilla JavaScript",
   "main": "index.js",
   "scripts": {
-    "start": "webpack server",
-    "build": "webpack --mode=development"
+    "start": "node server.js",
+    "build": "webpack --mode=development",
+    "devStart": "webpack server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,14 @@
   },
   "homepage": "https://github.com/park-moen/Moen-mart#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -27,6 +35,7 @@
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "nodemon": "^2.0.7",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
