--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
